--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "@aws-amplify/ui-vue": "^3.1.27",
     "@turf/circle": "^6.5.0",
-    "aws-amplify": "^5.3.10",
+    "aws-amplify": "^5.3.11",
     "aws-sdk": "^2.1450.0",
     "axios": "^1.5.1",
     "maplibre-gl": "^3.3.1",
     "material-design-icons": "^3.0.1",
     "pinia": "^2.1.6",
+    "vite-plugin-svgr": "^4.1.0",
+    "vite-tsconfig-paths": "^4.2.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
     "vuetify": "^3.3.15"
