--- a/webapp/package.json
+++ b/webapp/package.json
@@ -8,22 +8,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@aws-amplify/ui-vue": "^3.1.27",
+    "@aws-amplify/ui-vue": "^4.0.0",
+    "@aws-sdk/client-location": "^3.451.0",
+    "@aws-sdk/signature-v4": "^3.374.0",
+    "@aws/amazon-location-utilities-auth-helper": "^1.0.3",
     "@turf/circle": "^6.5.0",
-    "aws-amplify": "^5.3.11",
-    "aws-sdk": "^2.1450.0",
-    "axios": "^1.5.1",
-    "maplibre-gl": "^3.3.1",
+    "aws-amplify": "^6.0.2",
+    "axios": "^1.6.2",
+    "maplibre-gl": "^3.6.1",
     "material-design-icons": "^3.0.1",
-    "pinia": "^2.1.6",
+    "pinia": "^2.1.7",
     "vite-plugin-svgr": "^4.1.0",
     "vite-tsconfig-paths": "^4.2.1",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
-    "vuetify": "^3.3.15"
+    "vue-router": "^4.2.5",
+    "vuetify": "^3.4.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.3.1",
-    "vite": "^4.4.9"
+    "@vitejs/plugin-vue": "^4.5.0",
+    "vite": "^4.5.0"
   }
 }
