feat: Add simulation control panel with route selection and smooth vehicle tracking
- Created SimulationPanel component with route selection UI
- Added IoT device conflict detection and warnings
- Updated LaunchDeliveryFleet Lambda to accept tripIds parameter
- Added DynamoDB direct update to change trip status to 'inroute'
- Implemented smooth animation for vehicle position transitions
- Fixed map search null pointer error
- Enhanced real-time tracking with 4-second coordinate interpolation

--- a/template.yaml
+++ b/template.yaml
@@ -459,6 +459,8 @@ Resources:
             ParameterName: !Sub "${ProjectName}/*"
         - LambdaInvokePolicy:
             FunctionName: !Ref PushVehiclePosition
+        - DynamoDBCrudPolicy:
+            TableName: !Ref TripsTable
         - Version: '2012-10-17' # Policy Document
           Statement:
             - Effect: Allow
@@ -474,6 +476,7 @@ Resources:
           PROJECT_NAME: !Ref ProjectName
           PROJECT_ENV: !Ref EnvironmentName
           APPSYNC_URL: !GetAtt GraphQLAPI.GraphQLUrl
+          TRIPS_TABLE_NAME: !Ref TripsTable
 
   PushVehiclePosition:
     Type: AWS::Serverless::Function 
