feat: Auto-complete trips and enhance subscription logging
- Added automatic trip status update to 'completed' when simulation finishes
- PushVehiclePosition Lambda now updates DynamoDB with completion status and timestamp
- Added DynamoDB permissions and TRIPS_TABLE_NAME env var to PushVehiclePosition
- Enhanced subscription logging with detailed device tracking
- Added console.log for real-time subscription data reception
- Removed polling in favor of pure subscription-based tracking

--- a/template.yaml
+++ b/template.yaml
@@ -500,6 +500,8 @@ Resources:
         - arn:aws:iam::aws:policy/AWSXrayWriteOnlyAccess
         - SSMParameterReadPolicy:
             ParameterName: !Sub "${ProjectName}/*"
+        - DynamoDBCrudPolicy:
+            TableName: !Ref TripsTable
         - Version: '2012-10-17' # Policy Document
           Statement:
             - Effect: Allow
@@ -522,6 +524,7 @@ Resources:
           PROJECT_ENV: !Ref EnvironmentName
           ROUTE_NAME: !Ref RouteCalculation
           TRACKER_NAME: !Ref Tracker
+          TRIPS_TABLE_NAME: !Ref TripsTable
 
   # IoTUpdateTracker:
   #   Type: AWS::Serverless::Function 
